# EvoMMAgent

./: .gitignore  README.md  config.py  eval_analyzer.py  pyproject.toml  run_evaluation.py  run_mm_agent.py  run_test.py  run_test_tool.sh  run_tool_test.py  run_vl_api_test.py  test_tool_calling.py  test_tools.py
agent/: __init__.py  base_agent.py  mm_agent.py  simulated_agent.py
api/: __init__.py  async_pool.py  custom_service.py  json_parser.py  vision_utils.py  wrapper.py
api/utils/: __init__.py  key_loader.py  key_operator.py  multimodal_processor.py
data_preprocess/: README.md  dataset_slicer.py  explore_hf_data.py  explore_hf_dataset.py
data_preprocess/image/: blink.py  chartqa_pro.py  hr_bench.py  mathverse_mc.py  mathversion_mc.py  mathvision_mc.py  mme_realworld_lite.py  mmmu_mc.py  mmsi_bench.py  mmstar.py  o3_bench.py  realworldqa.py  tir_bench.py  tree_bench.py  vstar_bench.py  we_math.py  zoom_bench.py
docs/: RETRIEVAL_DESIGN.md
error_analysis/: README.md  __init__.py  analyzer.py  client.py  formatter.py  prompts.py  run.py
mm_memory/: __init__.py  memory.py  memory_bank.py  state_bank.py  trace_bank.py
mm_memory/retrieval/: README.md  __init__.py  embedder.py  pipeline.py  query_rewriter.py  reranker.py  state_pipeline.py  trace_pipeline.py
runner/: __init__.py  runner.py  task_instructions.py
scripts/: activate_env.sh  backfill_ground_truth.py  build_memory_bank.py  build_state_bank.py  build_state_bank_generic.py  build_trace_bank.py  build_trace_bank_generic.py  fix_mmsi_jsonl.py  merge_state_banks.py  setup_env.sh
shell/: build_state_bank.sh  build_state_bank_copy.sh
template/: Eval_MMAgent_EN.jinja2  Eval_MMAgent_ZH.jinja2  MMAgent_EN.jinja2  MMAgent_ZH.jinja2  ToolCaller_EN.jinja2  ToolCaller_ZH.jinja2  qwen3_vl_reranker.jinja
template/exp_prompt/base/: en.jinja2  zh.jinja2
template/exp_prompt/more_tool_call/: en.jinja2  zh.jinja2
tool/: INTEGRATION_GUIDE.md  __init__.py  base_tool.py  calculator_tool.py  crop_tool.py  detect_faces_tool.py  estimate_object_depth_tool.py  estimate_region_depth_tool.py  get_image2images_similarity_tool.py  get_image2texts_similarity_tool.py  get_images_tool.py  get_objects_tool.py  get_text2images_similarity_tool.py  gpu_manager.py  localize_objects_tool.py  measure_region_property_tool.py  model_cache.py  ocr_tool.py  search_experiences_tool.py  solve_math_equation_tool.py  visualize_regions_tool.py  web_search_tool.py  zoom_in_tool.py
tool/utils/: __init__.py  image_utils.py  temp_manager.py
unit_test/: README.md  helpers.py  test_answer_match.py  test_local.py  test_pipeline.py  test_services.py
unit_test/state_level/: test_agent_integration.py  test_local.py  test_pipeline.py
unit_test/trace_level/: test_local.py  test_pipeline.py  test_services.py
utils/: __init__.py  logger.py
