[project]
name = "evommagent"
version = "0.1.0"
description = "A flexible framework for building multi-modal agents with tool support"
authors = [
    {name = "Wang Shijian"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["agent", "multimodal", "tool-use", "reasoning", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jinja2>=3.0.0",
    "jsonschema>=4.0.0",
    "pillow>=10.0.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "torchvision==0.19.1",
    "opencv-python>=4.8.0",
    "huggingface-hub>=0.20.0",
    "open-clip-torch>=2.24.0",
    "easyocr>=1.7.0",
    "fairscale==0.4.4",
    "timm==0.4.12",
    "supervision>=0.27.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "pip>=25.3",
    "torchaudio==2.4.1",
    "torch==2.4.1",
    "face-detection==0.2.2",
    "accelerate>=1.12.0",
    "datasets>=2.14.0",
    "pyarrow>=12.0.0",
    "ram @ git+https://github.com/xinyu1205/recognize-anything.git",
    "socksio>=1.0.0",
    "addict>=2.4.0",
    "easydict>=1.10",
    "einops>=0.8.2",
    "transformers==5.0.0rc1",
    "wolframalpha>=5.1.3",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
    "cos-python-sdk-v5>=1.9.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
vl = [
    "qwen-vl-utils==0.0.14",
    "decord>=0.6.0",
    "torchcodec>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "tool", "api"]
